# OneLiteFeatherRAGBot

./: .dockerignore  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile.discord-bot  Dockerfile.queue  LICENSE  README.md  WORKFLOW_INSTRUCTIONS.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: chart-release.yml  ci.yml  release.yml
charts/discord-rag-bot/: Chart.yaml  README.md  values.yaml
charts/discord-rag-bot/templates/: _helpers.tpl  bot-deployment.yaml  bot-hpa.yaml  configmap.yaml  secret.yaml  serviceaccount.yaml  worker-deployments.yaml  worker-hpa.yaml
k8s/: bot-hpa.yaml  configmap.yaml  discord-bot-deployment.yaml  secret.example.yaml  worker-deployment.yaml  worker-hpa.yaml
scripts/: bump_version.py  prepare_release.sh
src/discord_rag_bot/: __init__.py  app.py  config.py  job_repo.py
src/discord_rag_bot/bot/: __init__.py  client.py  services.py  startup.py
src/discord_rag_bot/commands/: __init__.py  ask.py  chat.py  config.py  credits.py  estimate.py  health.py  index_now.py  index_queue.py  loader.py  memory.py  ping.py  stats.py  version.py
src/discord_rag_bot/infrastructure/: __init__.py  ai.py  build_info.py  config_store.py  credits.py  gating.py  health_http.py  language.py  memory.py  memory_service.py  permissions.py  response_policy.py  (+2 more)
src/rag_cli/: __init__.py  config_loader.py  index.py  run_queue.py
src/rag_core/: __init__.py  checksums.py  chunking.py  jobs.py  kvstore_postgres.py  logging.py  metrics.py  rag_service.py  types.py
tests/: test_gating_llm_smoke.py
(+27 files in other folders)
