[project]
name = "discord-rag-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Phillipp Glanz", email = "6745190+TheMeinerLP@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "discord-py>=2.6.4",
    "llama-index>=0.14.8",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-openai>=0.6.10",
    "llama-index-vector-stores-postgres>=0.7.2",
    "llama-index-llms-ollama>=0.4.0",
    "llama-index-embeddings-ollama>=0.3.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.35.0",
    "pgvector>=0.3.3",
]

[project.scripts]
discord-rag-bot = "discord_rag_bot:main"
onelitefeather-rag-bot = "discord_rag_bot:main"
rag-index = "rag_cli.index:main"
rag-run-queue = "rag_cli.run_queue:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
]
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
